# MoltenSaltCalc

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  mkdocs.yml  noxfile.py  pyproject.toml  requirements.txt  requirements_FAIRCHEM.txt  requirements_GRACE.txt  requirements_MACE.txt  snellius_run.sh
demo/: analyzer.ipynb  simulator.ipynb
demo/demo_simulation_results/GRACE_1L_NaCl_super_short/NPT/: npt_NaCl_1100K.traj  npt_NaCl_1150K.traj  npt_NaCl_1200K.traj
demo/demo_simulation_results/GRACE_1L_NaCl_super_short/NVT/: nvt_NaCl_1100K.traj  nvt_NaCl_1150K.traj  nvt_NaCl_1200K.traj
docs/: MLIPs.md  analyzer_api.md  index.md  model_discovery_api.md  model_errors_api.md  simulator_api.md
docs/stylesheets/: extra.css
moltensaltcalc/: __init__.py  analyzer.py  model_errors.py  registry.py  simulator.py  utils.py
moltensaltcalc/models/: grace.py  mace.py
moltensaltcalc/moltensaltcalc.egg-info/: PKG-INFO  SOURCES.txt
production_calculations/: 00_reproduce_NaCl_density_evolution_GRACE_medium_Fig8.py  01_NaCl_density_evolution_GRACE_medium_initial_rocksalt.py  02_NaCl_density_evolution_GRACE_medium_initial_rocksalt_dt_0_2_fs.py  03_NaCl_density_evolution_GRACE_medium_initial_rocksalt_taut_500_fs.py  04_NaCl_density_evolution_GRACE_medium_initial_rocksalt_250_atoms.py  05_NaCl_density_evolution_GRACE_medium_initial_rocksalt_432_atoms.py  06_NaCl_density_evolution_GRACE_medium_initial_rocksalt_200_atoms.py  07_NaCl_density_evolution_GRACE_medium_initial_rocksalt_300_atoms.py  08_NaCl_density_evolution_GRACE_medium_initial_rocksalt_350_atoms.py  09_NaCl_density_evolution_GRACE_medium_initial_rocksalt_400_atoms.py  10_NaCl_density_evolution_GRACE_medium_initial_rocksalt_450_atoms.py  11_NaCl_density_evolution_GRACE_medium_initial_rocksalt_300_atoms_non-random_removed.py
src/moltensaltcalc/: __init__.py  __init__.pyi  analyzer.py  model_discovery.py  model_errors.py  registry.py  simulator.py
src/moltensaltcalc/models/: 7net.py  chgnet.py  fairchem.py  grace.py  mace.py  mattersim.py  nequip.py  nequix.py  upet.py
tests/: conftest.py  test_analyzer.py  test_simulator.py  test_uMLIPs.py  tests.ipynb
tests/test_analyzer_trajectories/: npt_NaCl_1100K.traj  npt_NaCl_1100K_no_time_fs.traj  npt_NaCl_1200K.traj  nvt_NaCl_1100K.traj  nvt_NaCl_1150K.traj  nvt_NaCl_1200K_nonconstant_timestep.traj
tests/test_uMLIP_precompiled/: oam-s-0.1.nequip.pth
