[build-system]
requires = ["uv_build >= 0.10.10, <0.11.0"]
build-backend = "uv_build"

[project]
name = "moltensaltcalc"
version = "0.1.1"
description = "Molten salt simulation package employing universal machine-learned interatomic potentials (uMLIPs)"
readme = "README.md"
requires-python = ">=3.10"
dynamic = []

authors = [
    { name = "Daniel Isler", email = "isler@differ.nl"},
    { name = "Lei Zhang" },
    { name = "Max van Brenk" },
    { name = "Suleyman Er", email = "s.er@differ.nl"},
]

license = "MIT"
license-files = ["LICEN[CS]E*"]

keywords = ["molecular dynamics", "ML potentials", "ASE", "materials science", "atomistic simulation", "interatomic potentials", "machine learning interatomic potentials"]

classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Physics",
    "Intended Audience :: Science/Research",
    "Development Status :: 3 - Alpha",
]

# Core dependencies
dependencies = [
    "ase>=3.22,<4.0",
    "numpy>=1.26,<3.0",
    "scipy>=1.10,<2.0",
    "myplots>=0.1.1",
]

# Optional dependencies (for MLIPs)
[project.optional-dependencies]
grace = ["tensorpotential"]
fairchem = ["fairchem-core>=2.3,<3.0"]
mace = ["mace-torch","cuequivariance","cuequivariance-torch"]
mattersim = ["mattersim"]
7net = ["sevenn"]
nequip = ["nequip"]
nequix = ["nequix"]
upet = ["upet"]
chgnet = ["chgnet"]

dev = [
    "nox",
    "pre-commit",
    "pytest",
    "pytest-cov",
    "uv",
]

docs = [
    "mkdocs-material",
    "mkdocstrings[python]",
    "black",
]

# Discoverability
[project.urls]
Documentation = "https://moltensaltcalc.readthedocs.io/en/latest/"
Repository = "https://github.com/leiapple/MoltenSaltCalc/"
Homepage = "https://github.com/leiapple/MoltenSaltCalc/"
Issues = "https://github.com/leiapple/MoltenSaltCalc/issues"

# UV build
[tool.uv_build]
include = ["moltensaltcalc/**/*.pyi", "moltensaltcalc/py.typed"]

# Pytest config
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q --strict-markers"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "umlip: marks tests as requiring a uMLIP backend to be installed (run with 'nox -s' or 'nox -s \"umlip(model='model_name')\"'). These tests are skipped by default as they require different environments.",
]

# Ruff config
[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes (unused imports, undefined names)
    "I",   # import sorting
    "B",   # flake8-bugbear (real bug risks)
    "UP",  # pyupgrade (modern Python)
    "SIM", # simplify code
    "C4",  # comprehensions
    "PIE", # misc useful improvements
]
ignore = ["E501"]
fixable = ["ALL"]

[tool.ruff.format]
docstring-code-format = true
quote-style = "double"
indent-style = "space"

# Pylint config
[tool.pylint.MAIN]
# Formerly [MASTER]

[tool.pylint.FORMAT]
max-line-length = 500

[tool.pylint.BASIC]
good-names = [
    "i",
    "j",
    "k",
    "T",
    "U",
    "V",
    "D",
    "Ea",
    "D0",
    "C",
    "var_U",
    "7net",
    "test_uMLIPs",
]

[tool.pylint."MESSAGES CONTROL"]
disable = ["import-outside-toplevel"]

[tool.pylint.DESIGN]
max-args = 15
max-positional-arguments = 15
max-branches = 30
max-locals = 35
max-statements = 60

[tool.pylint.TYPECHECK]
ignored-modules = [
    "numpy",
    "ase",
    "scipy",
    "pytest",
    "nox",
    "mace",
    "chgnet",
    "nequip",
    "nequix",
    "mattersim",
    "fairchem",
    "sevenn",
    "tensorpotential",
    "upet",
]
generated-members = ["GRACEModels.*"]
